Refactor code structure for improved readability and maintainability

--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "prototipacao-educa",
   "version": "0.1.0",
   "private": true,
+  "description": "Repositório de prototipação frontend orientado a jornadas com Puck, React e Storybook",
   "engines": {
-    "node": ">=20.0.0"
+    "node": ">=20.0.0",
+    "pnpm": ">=8.0.0"
   },
   "scripts": {
     "dev:studio": "pnpm --filter studio dev",
@@ -12,11 +14,15 @@
     "build:storybook": "pnpm --filter storybook build",
     "build:tokens": "pnpm --filter @prototipo/tokens build",
     "build:design-system": "pnpm --filter @prototipo/design-system build",
-    "build": "pnpm -r build",
+    "build": "pnpm build:tokens && pnpm build:design-system && pnpm build:studio && pnpm build:storybook",
     "lint": "pnpm -r lint",
-    "test": "pnpm -r test"
+    "test": "pnpm -r test",
+    "clean": "pnpm -r exec rm -rf node_modules dist build .next storybook-static"
   },
   "devDependencies": {
-    "typescript": "^5.7.2"
-  }
+    "typescript": "^5.6.3",
+    "prettier": "^3.3.3",
+    "eslint": "^9.15.0"
+  },
+  "packageManager": "pnpm@9.14.4"
 }
