--- a/.gitignore
+++ b/.gitignore
@@ -5,13 +5,13 @@ node_modules/
 
 # Testing
 coverage/
-*.lcov
 
-# Production
+# Production builds
 dist/
 build/
 out/
 .next/
+storybook-static/
 
 # Misc
 .DS_Store
@@ -22,11 +22,17 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-.pnpm-debug.log*
 
 # Local env files
-.env
 .env*.local
+.env
+
+# Vercel
+.vercel
+
+# TypeScript
+*.tsbuildinfo
+next-env.d.ts
 
 # IDEs
 .vscode/
@@ -34,12 +40,6 @@ pnpm-debug.log*
 *.swp
 *.swo
 *~
-
-# Storybook
-storybook-static/
-
-# TypeScript
-*.tsbuildinfo
 
 # OS
 Thumbs.db
