--- a/packages/tokens/package.json
+++ b/packages/tokens/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@prototipo/tokens",
   "version": "0.1.0",
-  "type": "module",
+  "description": "Design tokens para o sistema de prototipação",
   "main": "dist/index.cjs",
-  "module": "dist/index.js",
+  "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/index.js",
+      "import": "./dist/index.esm.js",
       "require": "./dist/index.cjs",
       "types": "./dist/index.d.ts"
     },
@@ -19,5 +19,8 @@
   "scripts": {
     "build": "node scripts/build-tokens.mjs",
     "dev": "node scripts/build-tokens.mjs --watch"
+  },
+  "devDependencies": {
+    "chokidar": "^4.0.3"
   }
 }
