--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "setup:gh:labels": "bash ./scripts/gh/create-labels.sh",
     "setup:gh:issues": "bash ./scripts/gh/create-issues.sh",
     "setup:gh:project": "bash ./scripts/gh/create-project.sh",
+    "setup:gh:add-issues-to-project": "bash ./scripts/gh/add-issues-to-project.sh",
     "test": "pnpm -r test",
     "clean": "pnpm -r exec rm -rf node_modules dist build .next storybook-static"
   },
