--- a/package.json
+++ b/package.json
@@ -15,15 +15,10 @@
     "build:tokens": "pnpm --filter @prototipo/tokens build",
     "build:design-system": "pnpm --filter @prototipo/design-system build",
     "build": "pnpm build:tokens && pnpm build:design-system && pnpm build:studio && pnpm build:storybook",
-    "lint": "pnpm -r lint",
-    "setup:gh:labels": "bash ./scripts/gh/create-labels.sh",
-    "setup:gh:issues": "bash ./scripts/gh/create-issues.sh",
-    "setup:gh:issues:all": "bash ./scripts/gh/create-issues-all.sh",
-    "setup:gh:project": "bash ./scripts/gh/create-project.sh",
-    "setup:gh:add-issues-to-project": "bash ./scripts/gh/add-issues-to-project.sh",
-    "setup:gh:add-to-project-v2": "bash ./scripts/gh/quick-add-to-project.sh",
-    "setup:gh:full": "bash ./scripts/gh/setup-github-full.sh",
-    "test": "pnpm -r test",
+    "lint": "turbo run lint",
+    "type-check": "turbo run type-check",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "domains:index": "node scripts/generate-domains-index.mjs",
     "clean": "pnpm -r exec rm -rf node_modules dist build .next storybook-static",
     "gen:journeys": "node ./scripts/gen-journeys-index.js"
   },
