--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
   },
   "devDependencies": {
     "@prototipo/eslint-config": "workspace:*",
-    "typescript": "^5.6.3",
+    "eslint": "^9.15.0",
     "prettier": "^3.3.3",
-    "eslint": "^9.15.0"
+    "turbo": "^2.6.1",
+    "typescript": "^5.6.3"
   },
   "packageManager": "pnpm@9.14.4"
 }
