--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -30,6 +30,8 @@
   },
   "devDependencies": {
     "@prototipo/eslint-config": "workspace:*",
+    "@storybook/react": "^8.4.7",
+    "@storybook/types": "^8.6.14",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "eslint": "^9.15.0",
