--- a/apps/studio/package.json
+++ b/apps/studio/package.json
@@ -14,10 +14,18 @@
     "@measured/puck": "^0.16.0",
     "@prototipo/design-system": "workspace:*",
     "@prototipo/tokens": "workspace:*",
+    "@radix-ui/react-progress": "^1.1.8",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slot": "^1.2.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.554.0",
     "next": "^15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "swr": "^2.3.6"
+    "swr": "^2.3.6",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@prototipo/eslint-config": "workspace:*",
@@ -27,8 +35,11 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^5.1.1",
+    "autoprefixer": "^10.4.22",
     "eslint": "^9.15.0",
     "happy-dom": "^20.0.10",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.17",
     "typescript": "^5.6.3",
     "vitest": "^4.0.13"
   }
