--- a/apps/studio/package.json
+++ b/apps/studio/package.json
@@ -24,11 +24,11 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "swr": "^2.3.6",
-    "tailwind-merge": "^3.4.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@prototipo/eslint-config": "workspace:*",
+    "@tailwindcss/postcss": "^4.1.17",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@types/node": "^22.9.1",
@@ -40,6 +40,8 @@
     "happy-dom": "^20.0.10",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.17",
+    "tailwindcss-animate": "^1.0.7",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5.6.3",
     "vitest": "^4.0.13"
   }
