feat: implement dashboard hydration resilience
- Add types for hydration snapshots and dashboard render checks.
- Create helper functions for running hydration checks in tests.
- Implement initial test suite for dashboard hydration, currently skipped.
- Capture baseline console output and CI results for future comparison.
- Document hydration validation process and update QA checklists.
- Establish OpenAPI contracts for hydration telemetry.
- Define data models for hydration snapshots and render checks.
- Outline implementation plan and research decisions for hydration resilience.
- Update quickstart guide for local development and testing.

--- a/apps/studio/package.json
+++ b/apps/studio/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "eslint .",
     "test": "vitest run",
+    "test:dashboard-hydration": "vitest run src/tests/dashboard-hydration/hydration.spec.ts",
     "test:watch": "vitest"
   },
   "dependencies": {
