feat(experience-hub): consolidate Storybook into Experience Hub with accessibility validation
- Added README.md for Experience Hub detailing objectives, structure, commands, and migration from apps/storybook.
- Introduced ACESSIBILIDADE.md for accessibility testing using the a11y addon in Storybook.
- Created GUIA-VISUAL-A11Y.md as a visual guide for using the a11y addon.
- Implemented IMPLEMENTACAO-A11Y.md documenting the integration of the a11y addon and its configuration.
- Updated storybook README.md to include accessibility features and usage instructions.
- Configured ESLint for Storybook with eslint.config.mjs.
- Set up main.ts for Storybook with necessary addons including a11y.
- Established package.json for Storybook with scripts for development, build, and linting.
- Configured preview.ts for Storybook with accessibility parameters and background settings.
- Created TypeScript configuration files for Storybook.
- Added vercel.json for deployment configuration.
- Generated baseline logs for build, lint, and type-check processes.

--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "private": true,
   "description": "Repositório de prototipação frontend orientado a jornadas com Puck, React e Storybook",
   "engines": {
-    "node": ">=20.0.0",
-    "pnpm": ">=8.0.0"
+    "node": "22.21.1",
+    "pnpm": ">=9.14.4"
   },
   "scripts": {
     "dev:studio": "pnpm --filter studio dev",
-    "dev:storybook": "pnpm --filter storybook dev",
+    "dev:hub": "pnpm --filter experience-hub dev",
+    "dev:storybook": "pnpm --filter experience-hub dev",
     "build:studio": "pnpm --filter studio build",
-    "build:storybook": "pnpm --filter storybook build",
+    "build:hub": "pnpm --filter experience-hub build",
+    "build:storybook": "pnpm --filter experience-hub build",
     "build:tokens": "pnpm --filter @prototipo/tokens build",
     "build:design-system": "pnpm --filter @prototipo/design-system build",
-    "build": "pnpm build:tokens && pnpm build:design-system && pnpm build:studio && pnpm build:storybook",
+    "build": "pnpm build:tokens && pnpm build:design-system && pnpm build:hub && pnpm build:studio",
     "lint": "turbo run lint",
     "type-check": "turbo run type-check",
     "test:dashboard-hydration": "pnpm --filter studio test:dashboard-hydration",
