--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -10,13 +10,17 @@
         "lint": "eslint . --ext .ts,.tsx"
     },
     "dependencies": {
-        "next": "^15.5.6",
-        "react": "^18.3.1",
-        "react-dom": "^18.3.1",
-        "lucide-react": "^0.408.0",
+        "@radix-ui/react-primitive": "^2.1.4",
+        "@radix-ui/react-progress": "^1.1.8",
+        "@radix-ui/react-select": "^2.2.6",
         "@radix-ui/react-slot": "^1.2.4",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.0.0",
+        "lucide-react": "^0.408.0",
+        "next": "^15.5.6",
+        "next-themes": "^0.4.6",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
         "tailwind-merge": "^2.2.0"
     },
     "devDependencies": {
@@ -24,10 +28,10 @@
         "@types/node": "^20",
         "@types/react": "^18.3.12",
         "@types/react-dom": "^18.3.1",
-        "typescript": "^5.6.3",
+        "autoprefixer": "^10.4.16",
         "eslint": "^9.15.0",
-        "tailwindcss": "^3.4.1",
         "postcss": "^8.4.32",
-        "autoprefixer": "^10.4.16"
+        "tailwindcss": "^3.4.1",
+        "typescript": "^5.6.3"
     }
 }
