--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "type-check": "turbo run type-check",
     "test:dashboard-hydration": "pnpm --filter studio test:dashboard-hydration",
     "check:shadcn": "node scripts/check-shadcn-usage.mjs",
+    "mcp:figma:start": "pnpm --filter @educacross/figma-mcp-server start",
+    "mcp:figma:test": "pnpm --filter @educacross/figma-mcp-server test",
+    "mcp:figma:health": "curl -s http://localhost:3845/health || echo 'MCP server offline'",
+    "mcp:figma:stop": "pkill -f figma-mcp-server || true",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "domains:index": "node scripts/generate-domains-index.mjs",
     "clean": "pnpm -r exec rm -rf node_modules dist build .next storybook-static",
