--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -2,15 +2,16 @@
   "name": "@prototipo/design-system",
   "version": "0.2.0-beta",
   "description": "Biblioteca de componentes React para o sistema de prototipação",
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
+  "main": "dist/src/index.js",
+  "module": "dist/src/index.mjs",
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.js",
-      "types": "./dist/index.d.ts"
-    }
+      "types": "./dist/index.d.ts",
+      "import": "./dist/src/index.mjs",
+      "require": "./dist/src/index.js"
+    },
+    "./index.css": "./dist/src/index.css"
   },
   "files": [
     "dist"
@@ -34,6 +35,7 @@
     "@storybook/types": "^8.6.14",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "esbuild-css-modules-plugin": "^3.1.5",
     "eslint": "^9.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
