--- a/domains/storybook/package.json
+++ b/domains/storybook/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "scripts": {
     "dev": "storybook dev -p 6006",
+    "test-storybook": "test-storybook --url http://localhost:6006 --coverage --maxWorkers=2",
     "build": "storybook build",
     "lint": "eslint ."
   },
@@ -16,6 +17,7 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.2",
+    "@playwright/test": "^1.57.0",
     "@prototipo/eslint-config": "workspace:*",
     "@storybook/addon-a11y": "^8.6.14",
     "@storybook/addon-essentials": "^8.4.7",
@@ -26,8 +28,10 @@
     "@storybook/react": "^8.4.7",
     "@storybook/react-vite": "^8.4.7",
     "@storybook/test": "^8.4.7",
+    "@storybook/test-runner": "^0.24.2",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "axe-core": "^4.11.0",
     "eslint": "^9.15.0",
     "storybook": "^8.4.7",
     "typescript": "^5.6.3",
