feat(sprint6): Complete Phase 1-2 (Setup + Foundational)
**Phase 1: Setup (4/5 complete)**
- T001: ✅ Verified Node 22.21.1 + pnpm 9.14.4
- T002: ✅ Dependencies restored (--frozen-lockfile)
- T003: ✅ Build order verified (tokens → DS → build)
- T004: ✅ Feature branch created (feature/sprint6-execution)
- T005: ⏭️ GitHub issues deferred (non-critical)

**Phase 2: Foundational (6/6 complete)**
- T006: ✅ Workflow backup created
- T007: ✅ Playwright installed (1.57.0, already present)
- T008: ✅ playwright.config.ts created (3-browser config)
- T009: ✅ Sentry SDK installed (@sentry/nextjs 10.28.0)
- T010: ✅ Analytics SDK installed (react-ga4 2.1.0)
- T011: ✅ Quality gates pass:
  - Build: 0 errors (all 4 workspaces)
  - Lint: 0 errors, 22 warnings (expected)
  - TypeCheck: 0 errors
  - Constitution Principle 1: Maintained (run-ready)

**Baseline Metrics (pre-Sprint6):**
- Build Status: ✅ GREEN
- ESLint Warnings: 22 (target P1-002: 0)
- TypeScript Errors: 0
- Dev Servers: Ready

**Next Phase:** P1 Stories (US1.1, US1.2, US1.3)

Fixes #Sprint6-Kickoff

--- a/package.json
+++ b/package.json
@@ -35,15 +35,17 @@
     "perf:storybook": "playwright test scripts/playwright/storybook-perf.spec.ts --reporter=list"
   },
   "devDependencies": {
+    "@playwright/test": "^1.48.2",
     "@prototipo/eslint-config": "workspace:*",
     "eslint": "^9.15.0",
     "prettier": "^3.3.3",
     "turbo": "^2.6.1",
-    "typescript": "^5.6.3",
-    "@playwright/test": "^1.48.2"
+    "typescript": "^5.6.3"
   },
   "packageManager": "pnpm@9.14.4",
   "dependencies": {
-    "@specfy/stack-analyser": "1.27.3"
+    "@sentry/nextjs": "^10.28.0",
+    "@specfy/stack-analyser": "1.27.3",
+    "react-ga4": "^2.1.0"
   }
 }
