feat(e2e): Configure test artifacts and directory structure
- Update playwright.config.ts to include outputDir (test-results)
- Create artifact directories:
  * tests/e2e/screenshots/ - For failure screenshots
  * tests/e2e/videos/ - For test recordings
  * tests/e2e/traces/ - For Playwright traces
  * test-results/ - For test reports and results

- Add .gitkeep files to maintain directory structure in git
- Update .gitignore to:
  * Ignore test artifacts (screenshots, videos, traces)
  * Ignore test reports (test-results, playwright-report)
  * Keep .gitkeep files to preserve empty directories

Configuration now captures:
- Screenshots on test failures (for debugging)
- Videos on test failures (for visual inspection)
- Traces on first retry (for detailed timeline)
- HTML reports (playwright-report)
- JSON results (test-results)

Mark T045 complete in tasks.md

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "perf:storybook": "playwright test scripts/playwright/storybook-perf.spec.ts --reporter=list"
   },
   "devDependencies": {
+    "@axe-core/playwright": "^4.11.0",
     "@playwright/test": "^1.48.2",
     "@prototipo/eslint-config": "workspace:*",
     "eslint": "^9.15.0",
