feat(e2e): Configure test artifacts and directory structure
- Update playwright.config.ts to include outputDir (test-results)
- Create artifact directories:
  * tests/e2e/screenshots/ - For failure screenshots
  * tests/e2e/videos/ - For test recordings
  * tests/e2e/traces/ - For Playwright traces
  * test-results/ - For test reports and results

- Add .gitkeep files to maintain directory structure in git
- Update .gitignore to:
  * Ignore test artifacts (screenshots, videos, traces)
  * Ignore test reports (test-results, playwright-report)
  * Keep .gitkeep files to preserve empty directories

Configuration now captures:
- Screenshots on test failures (for debugging)
- Videos on test failures (for visual inspection)
- Traces on first retry (for detailed timeline)
- HTML reports (playwright-report)
- JSON results (test-results)

Mark T045 complete in tasks.md

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,12 @@ node_modules/
 
 # Testing
 coverage/
+test-results/
+playwright-report/
+!test-results/.gitkeep
+!tests/e2e/screenshots/.gitkeep
+!tests/e2e/videos/.gitkeep
+!tests/e2e/traces/.gitkeep
 
 # Production builds
 dist/
