--- a/.github/workflows/sprint-2-validation.yml
+++ b/.github/workflows/sprint-2-validation.yml
@@ -92,6 +92,7 @@ jobs:
           pnpm exec playwright test --reporter=html,json
         env:
           BASE_URL: 'http://localhost:3000'
+          CI: 'true'
       
       - name: 📊 Generate E2E Report
         if: always()
