--- a/domains/admin/package.json
+++ b/domains/admin/package.json
@@ -10,6 +10,8 @@
         "lint": "eslint . --ext .ts,.tsx"
     },
     "dependencies": {
+        "@prototipo/design-system": "workspace:*",
+        "@prototipo/tokens": "workspace:*",
         "@radix-ui/react-primitive": "^2.1.4",
         "@radix-ui/react-progress": "^1.1.8",
         "@radix-ui/react-select": "^2.2.6",
