feat: Implement Sprint 6 execution plan with comprehensive documentation and specifications
- Added contracts for export/import functionality in JSON, XML, and CSV formats.
- Defined data model entities and relationships for workflow runs, type check reports, unit test suites, and analytics configurations.
- Created an implementation plan outlining tasks, phases, and dependencies for the sprint.
- Developed quickstart guide for setup, build order, and development servers.
- Conducted research to clarify scope, testing coverage, performance goals, and observability requirements.
- Specified user stories and acceptance criteria for critical fixes, production readiness, and enhancements.
- Established tasks for setup, foundational work, design system components, journeys, and quality gates.

--- a/package.json
+++ b/package.json
@@ -45,8 +45,13 @@
   },
   "packageManager": "pnpm@9.14.4",
   "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.0.0",
     "@sentry/nextjs": "^10.28.0",
     "@specfy/stack-analyser": "1.27.3",
-    "react-ga4": "^2.1.0"
+    "dotenv": "^16.4.5",
+    "pino": "^9.5.0",
+    "react-ga4": "^2.1.0",
+    "undici": "^6.20.0",
+    "zod": "^3.23.8"
   }
 }
