--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -24,7 +24,8 @@
   },
   "dependencies": {
     "@prototipo/tokens": "workspace:*",
-    "@radix-ui/react-dropdown-menu": "^2.1.16"
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@tabler/icons-react": "^3.35.0"
   },
   "peerDependencies": {
     "react": "^18.0.0",
