feat(scripts): verificador automático de props de componentes
- Script verify-component-prop.mjs (180+ linhas)
- Previne criação de issues para funcionalidades já implementadas
- Busca props em interfaces TypeScript e código React
- Output colorido com diagnóstico claro (existe/não existe)
- Registrado como 'pnpm verify-prop <Component> <prop>'
- Testes validados: DataTable cellRenderer ✓, customHeader ✓, NonExistent ✓

Soluciona: Falsos positivos descobertos em #128-#132
Refs: #134 (PR com análise estratégica completa)

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "type-check": "turbo run type-check",
     "test:dashboard-hydration": "pnpm --filter studio test:dashboard-hydration",
     "check:shadcn": "node scripts/check-shadcn-usage.mjs",
+    "verify-prop": "node scripts/verify-component-prop.mjs",
     "mcp:figma:start": "pnpm --filter @educacross/figma-mcp-server start",
     "mcp:figma:test": "pnpm --filter @educacross/figma-mcp-server test",
     "mcp:figma:health": "curl -s http://localhost:3845/health || echo 'MCP server offline'",
