security(baseline): atualizar .gitignore para prevenir leak de secrets
- Adicionados padrões: *.key, *.pem, *credentials*, *secret*
- Protege tokens (Figma, GitHub, API keys) de commits acidentais
- Primeira camada de defesa (custo zero, proteção imediata)
- Issue de backlog: hardening completo após DS v1.0

--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,17 @@ pnpm-debug.log*
 # Local env files
 .env*.local
 .env
+.env.production
+.env.development
+
+# Secrets e credenciais (prevenção de leaks)
+*.key
+*.pem
+*.p12
+*.pfx
+*credentials*
+*secret*
+.secrets/
 
 # Vercel
 .vercel
